<resources>
    <string name="main_headline">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_app_text">Рекомендую курс по Android-разработке в Яндекс Практикуме: https://practicum.yandex.ru/android-developer/</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="no_email_client">Почтовый клиент не найден</string>
    <string name="no_browser">Браузер не найден</string>
    <string name="my_email">96–94@mail.ru</string>
    <string name="yandex_offer">"https://yandex.ru/legal/practicum_offer/"</string>
    <string name="no_results_found">Нечего не нашлось</string>
    <string name="server_error_message">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="play">PLAY</string>
    <string name="pause">PAUSE</string>
    <string name="media_library">Медиатека</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlists">Новый плейлист</string>
    <string name="playlists_not_created">Вы не создали\nни одного плейлиста</string>
    <string name="media_empty">Ваша медиатека пуста</string>
    <string name="tracks">%d треков</string>
    <string name="description">Описание</string>
    <string name="title">Название*</string>
    <string name="create">Создать</string>
    <string name="share">Поделиться</string>
    <string name="editInformation">Редактировать информацию</string>
    <string name="deletePlaylist">Удалить плейлист</string>
    <string name="noTrack">Вы не добавили не одного трека</string>
    <string name="trackAdded">Трек добавлен в плейлист</string>
    <string name="theTrackIsAlreadyInThePlaylist">Трек уже в плейлисте</string>
    <string name="save">Сохранить</string>
    <string name="finishCreatingPlaylist">Завершить создание плейлиста?</string>
    <string name="allUnsavedDataWillBeLost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="deleteTrack">Удалить трек?</string>
    <string name="delete">Удалить</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="allTracksWillRemainLibrary">Все треки останутся в медиатеке.</string>
    <string name="deleted">удален(а)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>