<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/YP_white"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/container"
        style="@style/MyToolbarTitleTextAppearance"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/settings_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="18dp">


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/darkThemeSwitch"
            style="@style/settingsItem"
            android:text="@string/dark_theme"
            app:thumbTint="@color/switch_thumb_tint_selector"
            app:trackTint="@color/switch_track_selector" />

        <TextView
            android:id="@+id/share_app_TV"
            style="@style/settingsItem"
            android:text="@string/share_app"
            app:drawableEndCompat="@drawable/ic_share" />

        <TextView
            android:id="@+id/contact_support_TV"
            style="@style/settingsItem"
            android:text="@string/contact_support"
            app:drawableEndCompat="@drawable/ic_write_to_support" />

        <TextView
            android:id="@+id/user_agreement_TV"
            style="@style/settingsItem"
            android:text="@string/user_agreement"
            app:drawableEndCompat="@drawable/ic_user_agreement" />

    </LinearLayout>
</LinearLayout>
















