<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layuot_16dp"
    android:background="?attr/mainTheme"
    android:theme="@style/Theme.PlaylistMaker">

    <TextView
        android:id="@+id/textView"
        style="@style/ActivityTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layuot_24dp"
        android:text="@string/main_headline"
        android:textColor="@color/YP_white"
        app:layout_constraintBottom_toTopOf="@+id/search_BTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_BTN"
        style="@style/ActivityBTN"
        android:layout_width="@dimen/layuot_0dp"
        android:layout_height="@dimen/layuot_0dp"
        android:layout_marginTop="@dimen/button_top_margin"
        android:layout_marginBottom="@dimen/layuot_16dp"
        android:text="@string/search"
        app:icon="@drawable/ic_search"
        app:layout_constraintBottom_toTopOf="@+id/media_library_BTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/media_library_BTN"
        style="@style/ActivityBTN"
        android:layout_width="@dimen/layuot_0dp"
        android:layout_height="@dimen/layuot_0dp"
        android:layout_marginBottom="@dimen/layuot_16dp"
        android:text="@string/media_library"
        app:icon="@drawable/ic_media_library"
        app:layout_constraintBottom_toTopOf="@+id/settings_BTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_BTN" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_BTN"
        style="@style/ActivityBTN"
        android:layout_width="@dimen/layuot_0dp"
        android:layout_height="@dimen/layuot_0dp"
        android:layout_marginBottom="28dp"
        android:text="@string/settings_title"
        app:icon="@drawable/ic_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/media_library_BTN" />
</androidx.constraintlayout.widget.ConstraintLayout>