<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/white_black"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mediaLibrary"
        style="@style/MyToolbarTitleTextAppearance"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_56dp"
        app:layout_constraintBottom_toTopOf="@id/tabLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/media_library"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_48dp"
        android:background="?attr/white_black"
        app:layout_constraintBottom_toTopOf="@id/viewPager"
        app:layout_constraintTop_toBottomOf="@id/mediaLibrary"
        app:tabTextAppearance="@style/textStyle14_option2"
        app:tabIndicatorColor="?attr/black_white"
        app:tabTextColor="?attr/black_white">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_tracks"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlists"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>