<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/white_black"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context="com.example.my.search.presentation.ui.SearchFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/MyToolbarTitleTextAppearance"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_56dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/layout_16dp"
        app:title="@string/search" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/layout_16dp"
        android:layout_marginVertical="@dimen/layout_8dp">

        <View
            android:id="@+id/searchInputLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_48dp"
            android:background="@drawable/edittext_rounded" />

        <ImageView
            android:layout_width="@dimen/layout_24dp"
            android:layout_height="@dimen/layout_24dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/layout_12dp"
            android:src="@drawable/ic_search"
            app:tint="?attr/gray_black" />

        <EditText
            android:id="@+id/searchEditText"
            style="@style/searchStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/layout_48dp"
            android:layout_marginEnd="@dimen/layout_48dp"
            android:background="@android:color/transparent"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/layout_8dp"
            android:paddingEnd="@dimen/layout_8dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="?attr/gray_black" />

        <ImageButton
            android:id="@+id/clearButton"
            android:layout_width="@dimen/layout_24dp"
            android:layout_height="@dimen/layout_24dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/layout_16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_close"
            android:visibility="gone"
            app:tint="?attr/gray_black" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/layout_44dp"
        android:layout_height="@dimen/layout_44dp"
        android:layout_marginTop="@dimen/layout_248dp"
        android:indeterminateTint="@color/YP_blue"
        android:layout_gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/historyHeader"
        style="@style/textStyle19_option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_24dp"
        android:text="@string/you_search"
        android:textAlignment="center"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/placeholderGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/layout_16dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/placeholderImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_no_music" />

        <TextView
            android:id="@+id/placeholderText"
            style="@style/textStyle19_option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_16dp"
            android:text="@string/no_results_found"
            android:textAlignment="center" />

        <Button
            android:id="@+id/retryButton"
            style="@style/textButtonStyle14_option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_24dp"
            android:text="@string/update"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/clearHistoryButton"
        style="@style/textButtonStyle14_option3"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_36dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/layout_24dp"
        android:text="@string/clear_history"
        android:visibility="gone" />
</LinearLayout>
