<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/YP_lightGray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/q"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tracksBottomSheet">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/imageColor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/layout_24dp"
            android:background="@color/YP_white"
            app:layout_constraintBottom_toTopOf="@id/namePlaylist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="NotSibling">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftBorder40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="40dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightBorder40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="40dp" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageColor"
                app:layout_constraintVertical_bias="0.0"
                app:navigationIcon="@drawable/ic_back"
                app:navigationIconTint="@color/YP_black" />

            <ImageView
                android:id="@+id/coverPlaylist"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginVertical="40dp"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="@id/imageColor"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@id/rightBorder40dp"
                app:layout_constraintStart_toStartOf="@id/leftBorder40dp"
                app:layout_constraintTop_toTopOf="@id/toolbar"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/layout_16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/layout_16dp" />

        <TextView
            android:id="@+id/namePlaylist"
            style="@style/textStyle24"
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_28dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/descriptionPlaylist"
            app:layout_constraintEnd_toEndOf="@id/rightBorder16dp"
            app:layout_constraintStart_toStartOf="@id/leftBorder16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageColor" />

        <TextView
            android:id="@+id/descriptionPlaylist"
            style="@style/textStyle18"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/layout_8dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/quantityAndLength"
            app:layout_constraintEnd_toEndOf="@id/rightBorder16dp"
            app:layout_constraintStart_toStartOf="@id/leftBorder16dp"
            app:layout_constraintTop_toBottomOf="@+id/namePlaylist" />

        <LinearLayout
            android:id="@+id/quantityAndLength"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/layout_8dp"
            app:layout_constraintBottom_toTopOf="@id/functions"
            app:layout_constraintEnd_toEndOf="@id/rightBorder16dp"
            app:layout_constraintStart_toStartOf="@id/leftBorder16dp"
            app:layout_constraintTop_toBottomOf="@id/descriptionPlaylist">

            <TextView
                android:id="@+id/trackTime"
                style="@style/textStyle18"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="@dimen/layout_16dp"
                android:layout_height="@dimen/layout_16dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_point_black"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/trackCount"
                style="@style/textStyle18"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tracks" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/functions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/rightBorder16dp"
            app:layout_constraintStart_toStartOf="@id/leftBorder16dp"
            app:layout_constraintTop_toBottomOf="@id/quantityAndLength">

            <ImageView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_24x24"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_16dp"
                android:src="@drawable/ic_mode"
                tools:ignore="ContentDescription" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/tracksBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_botton_sheet"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintTop_toBottomOf="@id/functions">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@color/YP_lightGray" />

        <TextView
            android:id="@+id/noTracks"
            style="@style/textStyle19_option1"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_30dp"
            android:text="@string/noTrack" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracksRecyclerView"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/layout_12dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/playlistActionsBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/layout_24dp"
        android:background="@drawable/rounded_botton_sheet"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="384dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@color/YP_lightGray" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/playlist"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_60dp"
            android:layout_marginTop="@dimen/layout_24dp">

            <ImageView
                android:id="@+id/coverP"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/layout_12dp"
                android:layout_marginTop="@dimen/layout_8dp"
                android:layout_marginBottom="@dimen/layout_8dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameP"
                style="@style/textStyle16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_8dp"
                android:layout_marginEnd="@dimen/layout_44dp"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toTopOf="@id/quantityP"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/coverP"
                app:layout_constraintTop_toTopOf="@id/coverP" />

            <TextView
                android:id="@+id/quantityP"
                style="@style/textStyle11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_8dp"
                android:layout_marginEnd="@dimen/layout_44dp"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@id/coverP"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/coverP"
                app:layout_constraintTop_toBottomOf="@id/nameP"
                tools:ignore="NotSibling" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/toShare"
            style="@style/textStyle16"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_60dp"
            android:layout_marginStart="@dimen/layout_16dp"
            android:layout_marginTop="30dp"
            android:text="@string/share" />

        <TextView
            android:id="@+id/editInformation"
            style="@style/textStyle16"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_60dp"
            android:layout_marginStart="@dimen/layout_16dp"
            android:text="@string/editInformation" />

        <TextView
            android:id="@+id/deletePlaylist"
            style="@style/textStyle16"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_60dp"
            android:layout_marginStart="@dimen/layout_16dp"
            android:text="@string/deletePlaylist" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
